@@ -29,7 +29,7 @@ PROXY_AUTH_PASSTHROUGH = 1
 PROXY_AUTH_TYPE = none
 PROXY_AUTH_USER = 
 PROXY_PORT = 80
-PROXY_SERVER = 
+PROXY_SERVER =
 SEC_IP = 
 SERVER = farscape.artica.es
 SOCKS_AUTH = 0
@@ -43,3 +43,6 @@ REQUESTS_LOG = requests.log
 SELECTOR_INTERVAL = 20
 MONITORING_ENABLED = 1
 MONITORING_INTERVAL = 60
+MONITORING_PREFIX = epic
+MONITORING_GROUP = epic_stats
+MONITORING_GLOBAL_NAME = epic-global
