@@ -1,3 +1,10 @@
+2011-10-03 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* central_proxy/central_proxy.pl: Changed monitoring function to support 
+	customized prefix names and groups.
+	* central_proxy/central_proxy.cfg: Added new parameters MONITORING_PREFIX, 
+	MONITORING_GROUP and MONITORING_GLOBAL_NAME.
+
 2011-09-07 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* satellite_proxy/cfg.php: Added parameter for request log path. 
